--- a/public/index.html
+++ b/public/index.html
@@ -246,12 +246,12 @@
 					<div class="gtco-widget">
 						<h3 style="color:white;">Links</h3>
 						<ul class="gtco-footer-links">
-							<li><a href="https://antecedentes.policia.gov.co:7005/WebJudicial/"  style="color:white;">Policia Nacional</a></li>
-							<li><a href="http://siri.procuraduria.gov.co:8086/CertWEB/Certificado.aspx?tpo=1"  style="color:white;">Procuraduria</a></li>
-							<li><a href="http://cfiscal.contraloria.gov.co/siborinternet/certificados/certificadosPersonaNatural.asp"  style="color:white;">Contraloria</a></li>
-							<li><a href="http://www.fosyga.gov.co/BDUA/Consulta-Afiliados-BDUA"  style="color:white;">fosyga</a></li>
-							<li><a href="https://sanctionssearch.ofac.treas.gov/"  style="color:white;">O.F.A.C</a></li>
-							<li><a href="https://www.interpol.int/es/notice/search/wanted"  style="color:white;">Interpol</a></li>
+							<li><a href="https://antecedentes.policia.gov.co:7005/WebJudicial/" target="_blank" style="color:white;">Policia Nacional</a></li>
+							<li><a href="http://siri.procuraduria.gov.co:8086/CertWEB/Certificado.aspx?tpo=1" target="_blank" style="color:white;">Procuraduria</a></li>
+							<li><a href="http://cfiscal.contraloria.gov.co/siborinternet/certificados/certificadosPersonaNatural.asp" target="_blank" style="color:white;">Contraloria</a></li>
+							<li><a href="http://www.fosyga.gov.co/BDUA/Consulta-Afiliados-BDUA" target="_blank" style="color:white;">fosyga</a></li>
+							<li><a href="https://sanctionssearch.ofac.treas.gov/" target="_blank" style="color:white;">O.F.A.C</a></li>
+							<li><a href="https://www.interpol.int/es/notice/search/wanted" target="_blank" style="color:white;">Interpol</a></li>
 						</ul>
 						<h3 style="color:white;">Blog</h3>
 						<ul class="gtco-footer-links">
@@ -265,8 +265,8 @@
 						<h3 style="color:white;">Contactenos</h3>
 						<ul class="gtco-quick-contact">
 							<li><a href="#"  style="color:white;"><i class="icon-phone"  style="color:white;"></i> +57 350 452 26 80</a></li>
-							<li><a href="#"  style="color:white;"><i class="icon-phone"  style="color:white;"></i> Radio: 2204*4</a></li>
-							<li><a href="#"  style="color:white;"><i  style="color:white;"class="icon-mail2"></i> info@antifraudminds.com</a></li>
+							<li><a href="#"  style="color:white;"><i class="icon-phone" style="color:white;"></i> Radio: 2204*4</a></li>
+							<li><a href="#"  style="color:white;"><i style="color:white;" class="icon-mail2"></i> info@antifraudminds.com</a></li>
 						</ul>
 					</div>
 				</div>
@@ -281,13 +281,14 @@
 					</p>
 					<p class="pull-right">
 						<ul class="gtco-social-icons pull-right">
-							<li><a href="https://twitter.com/antifraudminds"><i  style="color:white;" class="icon-twitter"></i></a></li>
-							<li><a href="https://www.facebook.com/Antifraud-Minds-708109079352330/"><i  style="color:white;" class="icon-facebook"></i></a></li>
-							<li><a href="https://www.linkedin.com/in/antifraud-minds-a6939413a/"><i  style="color:white;" class="icon-linkedin"></i></a></li>
+							<li><a href="https://twitter.com/antifraudminds" target="_blank"><i  style="color:white;" class="icon-twitter"></i></a></li>
+							<li><a href="https://www.facebook.com/Antifraud-Minds-708109079352330/" target="_blank"><i  style="color:white;" class="icon-facebook"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/antifraud-minds-a6939413a/" target="_blank"><i  style="color:white;" class="icon-linkedin"></i></a></li>
 						</ul>
 					</p>
 				</div>
 			</div>
+
 
 		</div>
 	</footer>
